# web_site

./: README.md  pyproject.toml
main_project/main_application/: urls.py
main_project/main_application/views/: index_view.py  init.py
main_project/main_project/: settings.py  urls.py
main_project/templates/main_application/: index.html
