[tool.poetry]
name = "business-card-web-site"
version = "0.1.0"
description = "Сайт визитка для специалиста"
authors = ["Константин Мурадян <constantin37@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.22"

[tool.poetry.group.dev.dependencies]
Pillow = "^9.3.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"
django-bootstrap5 = "^22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
